app/assets/stylesheets/components/_card.scss
/* ... */
.observatory__card--video {
  height: 440px;
  img {
    height: 100% !important;
  }
}

.observatory__card--image {
  background-size: cover;
}


.card__observatory {
  background-size: cover;
  background-position: center;
  height: 150px;
  border-radius: 1px;
  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: 22px;
  color: white;
  font-weight: bolder;
  text-shadow: 0 0 10px rgba(0, 0, 0, .7);
  transition: transform .2s ease;
  &:hover {
    transform: scale(1.05);
  }
}

.cards-container .card__map {
  height: 100vh;
  position: sticky;
  top: 0;
}

.card__we {
  display: flex;
  flex-direction: column;
  align-items: center;
  .circle--gray {
    margin-bottom: 2rem;
  }
  p {
    color: $primary;
    width: 14rem;
    text-align: center;
    margin-top: 1rem;
    font-weight: 400;
    font-size: 1rem;
    line-height: 24px;
    letter-spacing: 0.15px;
  }
}

.mb-childs > *:not(:last-child) {
  margin-bottom: .725rem;
}

// ARTICLE
@media (max-width: 1200px) {
  .mb-childs > *:not(:last-child) {
    margin-bottom: 1rem;
  }
}

.article__recent_new {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: .7rem;
  background-color: white;
  background: #FFFFFF;
  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.card__image-bg--recent {
  width: 100%;
  height: 196px;
  border-radius: 10px 10px 0 0px;
}

@media (min-width: 1200px) {
  .article__recent_new {
    grid-gap: 1rem;
    grid-template-columns: 1fr 3fr;
    margin-bottom: inherit;
  }

  .card__image-bg--recent {
    width: 100%;
    height: 100%;
    border-radius: 10px 0 0 10px;
  }
}

.article__home {
  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

.article__home .article__home_image {
  border-radius: 10px 10px 0 0;
}

.article__home__content {
  background-color: white;
  border-radius: 0 0 10px 10px;
  padding: 13px 15px 15px 15px;
}
.article__home__content__info {
  display: grid;
  grid-template-rows: 1fr 2fr;
  grid-gap: .25rem;
}

.article__home__tags {
  display: flex;
  align-items: center;
  gap: .5rem;
}

.article__home_header {
  font-weight: 700;
  font-size: .8rem !important;
  line-height: 19px;
  letter-spacing: 0.15px;
}

.article__card {
  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  .card__image {
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    height: 144px;
  }
}

.articles__home .article__card {
  min-height: 100%;
}

.article__card.full-height {
  min-height: 100%;
}

.card__image--highlight {
  height: 196px !important;
}

.article__card__content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  padding: 18px 15px;
}

.article__content__date {
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: .4px;
}

.card__content__header small {
  display: flex;
  justify-content: center;
  align-items: center;
}

h5.line-limit-3, h5.line-limit-3 {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  overflow: hidden;
}

small.tag, small > .tag {
  text-transform: uppercase;
  font-weight: 500;
  font-size: 8px;
  line-height: 16px;
  letter-spacing: 1.5px;
  padding: 5px 7px;
  border: 2px solid rgba(8, 52, 97, 0.1);
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: .5rem;
}

.tag.tag--hidden {
  display: none;
}

.home_article_tags {
  display: flex;
}

@media (min-width: 768px) {
  .card__image--highlight {
    height: 278px !important;
  }
  .article__card .card__image {
    height: 178px;
  }

  .article__home_image {
    height: 154px;
  }
  small.tag {
    font-size: 10px;
  }

  .article__home_header {
    font-weight: 700;
    font-size: 1rem !important;
    line-height: 26px;
    letter-spacing: 0.15px;
  }
}

@media (min-width: 992px) {
  .card__image--highlight {
    height: 264px !important;
  }
  .article__card .card__image {
    height: 144px;
  }
  .tag.tag--hidden {
    display: inherit;
  }

  .home__articles .article__home__content__info {
    display: flex;
    align-items: start;
    justify-content: space-between;
    flex-direction: column;
  }
  .card__content__header {
    flex-direction: row;
  }
}
@media (min-width: 1200px) {
  .card__image--highlight {
    height: 352px !important;
  }
  .article__card .card__image {
    height: 144px;
  }
}

// CARD INDEX

.cards__index {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 1rem;
}

.cards__index.cards__index--min-two {
  grid-template-columns: 1fr 1fr;
}

.cards__index--min-two img {
  box-shadow: -5px 5px 19px 3px rgba(82, 81, 81, 0.05);
  border-radius: 5px;
}


.card__index {
  height: 100%;
  border-radius: 10px;
  & > div {
    height: 281px;
    border-radius: 10px 10px 0px 0px;
  }
  p {
    padding: 8px 9px;
    text-align: center;
    border-radius: 0px 0px 10px 10px;
    box-shadow: 4px 4px 20px rgba(0, 0, 0, .1);
    font-weight: 600;
    letter-spacing: .15px;
    margin-bottom: 0;

  }

  &:hover {
    text-decoration: none;
    box-shadow: 1px 1px 5px rgba(0, 0, 0, .1);
  }
}

.cards__index.cards__index--grid {
  display: grid;
  grid-template-rows: 4fr 1fr;
  align-items: center;
  grid-gap: 0;

  p {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  &:hover {
    text-decoration: none;
    box-shadow: 0;
    img {
      box-shadow: 1px 1px 7px rgba(0,0,0,0.1);
    }
  }
}
.album__card {
  position: relative;
  // &:hover {
  //   .card__link--hidden {
  //       opacity: 1;
  //     }
  // }
}

.album__card__link {
  transition: opacity .5s ease;
  position: absolute;
  top:12px;
  right: 12px;
  opacity: .7;
  cursor: pointer;
  &:hover {
    opacity: 1;
  }
}
/* ... */

